# lab-spark-cluster

./: .gitignore  README.md  SPARK_CLUSTER_SETUP.md  cluster-config.txt  cluster-ips.txt  dataset_stats_cluster.csv  dataset_stats_local.csv  peak_hours_cluster.csv  peak_hours_local.csv  problem1_cluster.txt  pyproject.toml  reddit_analysis_cluster.py  reddit_analysis_local.py  setup-spark-cluster.sh  top_subreddits_cluster.csv  top_subreddits_local.csv
cluster-files/: nyc_tlc_problem1_cluster.py  reddit_analysis.py  reddit_analysis_cluster.py  reddit_analysis_local.py
